# deepmirror_home_task_prediction

./: LICENSE  README.md  Report.md  deepmirror_task_ml.yml  environment.yml  pyproject.toml
.github/workflows/: ci-cd.yml
OpenADMET_Data_Workflow/Applicability_domain/: AD_hlm_all.yml  AD_hlm_expansion_only.yml  AD_hlm_no_scale.yml
OpenADMET_Data_Workflow/Evaluation/: Evaluation.ipynb
OpenADMET_Data_Workflow/Prediction/: predict_expansion_autogluon.yml  predict_expansion_chemeleon.yml  predict_expansion_chemeleon_random.yml  predict_expansion_chemprop.yml  predict_expansion_chemprop_chemeleon.yml
OpenADMET_Data_Workflow_Chemprop/Evaluation/: Evaluation_Chemprop.ipynb
OpenADMET_Data_Workflow_Chemprop/Prediction/: predict_all_chemprop_chemeleon_high.yml  predict_all_chemprop_chemeleon_low.yml  predict_chemprop_chemeleon_chembl_high.yml  predict_chemprop_chemeleon_chembl_low.yml  predict_chemprop_chemeleon_no_chembl_high.yml  predict_chemprop_chemeleon_no_chembl_low.yml  predict_chemprop_chemeleon_openadmet_high.yml  predict_chemprop_chemeleon_openadmet_low.yml  predict_chemprop_no_scale_chemeleon.yml  predict_expansion_chemprop.yml  predict_no_scale_chemeleon.yml
deepmirror_predict/: cli.py
deepmirror_predict/analysis/: applicability_domain.py
deepmirror_predict/data_preprocession/: dedpulication.py  preprocessing.py
deepmirror_predict/features/: avalon.py  chemeleon.py  mordred.py  morgan.py  (+1 more)
example_config_files/: applicability_domain_example.yml  crossvalidation_example.yml  deduplication_example.yml  prediction_example.yml  preprocessing_example.yml
(+416 files in other folders)
