[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepmirror_predict"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "dimorphite-dl>=1.3.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[project.scripts]
deepmirror-cli = "deepmirror_predict.cli:main"